force-app/main/default/objects/CampaignMember/fields/AI_CV_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_CV_Score__c</fullName>
    <label>AI CV Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>