force-app/main/default/objects/CampaignMember/fields/AI_CV_Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_CV_Score_Explanation__c</fullName>
    <label>AI CV Score Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>