force-app/main/default/objects/CampaignMember/fields/AI_CV_Tier__c.field-meta.xml
<CustomField>
    <fullName>AI_CV_Tier__c</fullName>
    <label>AI CV Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Match</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
                <default>true</default>
                <label>Review Required</label>
            </value>
            <value>
                <fullName>Poor Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>