force-app/main/default/objects/CampaignMember/fields/AI_Protected_Skills__c.field-meta.xml
<CustomField>
    <fullName>AI_Protected_Skills__c</fullName>
    <label>AI Protected Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>