force-app/main/default/objects/CampaignMember/fields/AI_Protected_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Protected_Summary__c</fullName>
    <label>AI Protected Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>