force-app/main/default/objects/CampaignMember/fields/Combined_Score__c.field-meta.xml
<CustomField>
    <fullName>Combined_Score__c</fullName>
    <label>Combined Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>