force-app/main/default/objects/CampaignMember/fields/Created_From_Candidate_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Candidate_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this Campaign Member was created from the candidate portal Apply button.</description>
    <label>Created From Candidate Portal</label>
    <type>Checkbox</type>
</CustomField>