force-app/main/default/objects/CampaignMember/fields/Employer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employer_Notes__c</fullName>
    <label>Employer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>