force-app/main/default/objects/CampaignMember/fields/Identity_Reveal_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Reveal_Status__c</fullName>
    <label>Identity Reveal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
                <default>true</default>
                <label>Not Requested</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>