force-app/main/default/objects/CampaignMember/fields/Interview_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Interview_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Accepted</label>
    <type>Checkbox</type>
</CustomField>