force-app/main/default/objects/CampaignMember/fields/Questionnaire_Score__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Score__c</fullName>
    <label>Questionnaire Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>