force-app/main/default/objects/CampaignMember/fields/Swipe_Event__c.field-meta.xml
<CustomField>
    <fullName>Swipe_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swipe Event</label>
    <referenceTo>Swipe_Event__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>